Little SEO optimization

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge, hrome=1">
     <title>{{ page.title }}</title>
-    <meta name="viewport" content="width=device-width, inimum-scale=1, aximum-scale=1">
+    {% include meta.html %}
 
     <link rel="stylesheet" href="/css/style.css">
-
   </head>
   <body>
 
