--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,19 +4,21 @@
     <title>{{ page.title }}</title>
     {% include meta.html %}
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.min.css">
   </head>
   <body>
 
-    <header>
-      <h1 class="title"><a href="/">{{ site.name }}</a></h1>
+    <header class='site-header'>
+      <div class="container">
+        <a href=/articles>articles</a>
+      </div>
     </header>
 
     <div class="container">
       {{ content }}
     </div>
 
-    <footer>
+    <footer class="site-footer">
       <a href="/articles"><em>articles</em></a>
     </footer>
 
