--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,8 +2,10 @@
 layout: default
 ---
 
-<h1 class="title">{{ page.title }}</h1>
-
 <article class="post">
-  {{ content }}
+  <h1 class="post__title">{{ page.title }}</h1>
+  <p class="post__meta">{{ page.date | date_to_string }}</p>
+  <section class="post__body">
+    {{ content }}
+  </section>
 </article>
