Refactor html head

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>{{ page.title }}</title>
-    {% include meta.html %}
-
-    <link rel="stylesheet" href="/css/style.min.css">
+    {% include head.html %}
   </head>
   <body>
 
@@ -19,7 +16,7 @@
     </div>
 
     <footer class="site-footer">
-      <a href="/articles"><em>articles</em></a>
+      <a href="/articles">articles</a>
     </footer>
 
   </body>
