--- a/css/base/_code.scss
+++ b/css/base/_code.scss
@@ -8,6 +8,7 @@ code {
   padding: 0 3px;
   outline: 1px solid $base-ui-color;
   font-family: Consolas, "Liberation Mono", Courier, monospace;
+  font-style: normal;
   font-size: .8rem;
   white-space: nowrap;
   color: #d01040;
