--- a/css/_vars.scss
+++ b/css/_vars.scss
@@ -8,7 +8,10 @@
 $base-font-size:    16px;
 $base-line-height:  24px;
 
-$base-font-family:  Georgia, serif;
+$georgia:           Georgia, Cambria, "Times New Roman", Times, serif;
+$helvetica:         "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+
+$base-font-family:  $georgia;
 
 $base-color:        #4c4c4c;
 
