--- a/css/base/_main.scss
+++ b/css/base/_main.scss
@@ -10,6 +10,11 @@ html{
     min-height:100%;
 }
 
+@include headings(1, 6) {
+  font-family: $helvetica;
+  color: darken($base-color, 20%);
+}
+
 a {
   color: $brand-color;
   text-decoration: none;
